# socialfmt

./: .pre-commit-config.yaml  .vimrc  .vimspector.json  README.md  pyproject.toml
src/socialfmt/: __init__.py  char_count.py  format_symbols.py  format_x.py  maps.py  markdown_tree.py  markdown_tree2.py  thread_break_text.py
tests/: __init__.py  conftest.py  test_char_count.py  test_format_symbols.py  test_format_x.py  test_maps.py  test_thread_break_text.py
